# python-poetry

./: pyproject.toml
